--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.1.1-jre</version>
+            <version>33.0.0-jre</version>
         </dependency>
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
@@ -88,7 +88,7 @@
                         <include>**/*Property.java</include>
                         <include>**/*Test.java</include>
                     </includes>
-                    <argLine>--enable-preview</argLine>
+                    <!-- <argLine>enable-preview</argLine> -->
                 </configuration>
             </plugin>
             <plugin>
@@ -123,7 +123,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!-- <compilerArgs>enable-preview</compilerArgs> -->
                 </configuration>
             </plugin>
         </plugins>
